--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </h1>
                         <p class="text-white">We visualise your work, optimise your process and deliver faster.</p>
                         <div class="buttons">
-                            <button class="btn btn-blue">Learn more</button>
+                            <button class="btn btn-blue"><a href="about-us.html">Learn more</a></button>
                             <button class="btn btn-white">Contact Us</button>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
 												<span class="icon-craft"></span>
 											</div>
                                                 <h4 class="welcome-one__bottom-right-title">More about How we Mastered Our craft.</h4>																				
-                                                <a href="#" class="thm-btn welcome-one__btn">read more</a>
+                                                <a href="about-us.html" class="thm-btn welcome-one__btn">read more</a>
 											</div>	
 									</div>
 								</div>
@@ -407,7 +407,7 @@
                             <p>From web applications to creative design and networking 
                                 projects. Check out our rich portfolio to see what our team 
                                 has managed to conclude over the time.</p>
-                            <button class="btn" href="#">view portfolio</button>
+                            <button class="btn"><a href="portfolio.html">view portfolio</a></button>
                         </div>
                     </div>
                 </div>
