--- a/portfolio.html
+++ b/portfolio.html
@@ -357,13 +357,13 @@
                                     <a href="#">Web Host and Internet</a>
                                 </li>
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">About us</a>
+                                    <a href="about-us.html">About us</a>
                                 </li>
                                 <li>
-                                    <a href="#">Portfolio</a>
+                                    <a href="portfolio.html">Portfolio</a>
                                 </li>
                                 <li>
                                     <a href="#">Contacts</a>
