--- a/index.html
+++ b/index.html
@@ -269,22 +269,22 @@
                             </div>
                             <ul class="p-0 sub-services">
                                 <li>
-                                    <a class="text-white" href="#">Web App design and development</a>
+                                    <a class="text-white" href="service.html">Web App design and development</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Application development</a>
+                                    <a class="text-white" href="service.html">Application development</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Content development</a>
+                                    <a class="text-white" href="service.html">Content development</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">UI/UX design</a>
+                                    <a class="text-white" href="service.html">UI/UX design</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Print and Multimedia Production</a>
+                                    <a class="text-white" href="service.html">Print and Multimedia Production</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Graphics design</a>
+                                    <a class="text-white" href="service.html">Graphics design</a>
                                 </li>
                             </ul>
                             <div class="d-none d-lg-block arrow">
@@ -303,13 +303,13 @@
                             </div>
                             <ul class="p-0 sub-services">
                                 <li>
-                                    <a class="text-white" href="#">IT Products procurement</a>
+                                    <a class="text-white" href="service.html">IT Products procurement</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Software solutions</a>
+                                    <a class="text-white" href="service.html">Software solutions</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Research and Data collection</a>
+                                    <a class="text-white" href="service.html">Research and Data collection</a>
                                 </li>
                             </ul>
                             <div class="d-none d-lg-block arrow">
@@ -328,16 +328,16 @@
                             </div>
                             <ul class="p-0 sub-services">
                                 <li>
-                                    <a class="text-white" href="#">Structured network design and implementation</a>
+                                    <a class="text-white" href="service.html">Structured network design and implementation</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Telephony and Intercom services</a>
+                                    <a class="text-white" href="service.html">Telephony and Intercom services</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Fiber Optic Installation and repairs</a>
+                                    <a class="text-white" href="service.html">Fiber Optic Installation and repairs</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Network security</a>
+                                    <a class="text-white" href="service.html">Network security</a>
                                 </li>
                             </ul>
                             <div class="d-none d-lg-block arrow">
@@ -356,16 +356,16 @@
                             </div>
                             <ul class="p-0 sub-services">
                                 <li>
-                                    <a class="text-white" href="#">Domain name registration</a>
+                                    <a class="text-white" href="service.html">Domain name registration</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Web hosting and cloud solution</a>
+                                    <a class="text-white" href="service.html">Web hosting and cloud solution</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">Internet marketing</a>
+                                    <a class="text-white" href="service.html">Internet marketing</a>
                                 </li>
                                 <li>
-                                    <a class="text-white" href="#">SSL Certificate</a>
+                                    <a class="text-white" href="service.html">SSL Certificate</a>
                                 </li>
                             </ul>
                             <div class="d-none d-lg-block arrow">
@@ -482,16 +482,16 @@
                             <h4>links</h4>
                             <ul>
                                 <li>
-                                    <a href="#">Creative and Design</a>
+                                    <a href="service.html">Creative and Design</a>
                                 </li>
                                 <li>
-                                    <a href="#">Business Solutions</a>
+                                    <a href="service.html">Business Solutions</a>
                                 </li>
                                 <li>
-                                    <a href="#">Networking Solutions</a>
+                                    <a href="service.html">Networking Solutions</a>
                                 </li>
                                 <li>
-                                    <a href="#">Web Host and Internet</a>
+                                    <a href="service.html">Web Host and Internet</a>
                                 </li>
                                 <li>
                                     <a href="index.html">Home</a>
