--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Website</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -134,7 +134,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Networks</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Century Bottling Co.</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Century Bottling Co.</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -143,7 +143,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Graphic Design</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Power Products Uganda Ltd</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Power Products Uganda Ltd</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -152,7 +152,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Website</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -161,7 +161,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Networks</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Century Bottling Co.</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Century Bottling Co.</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -170,7 +170,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Graphic Design</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Power Products Uganda Ltd</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Power Products Uganda Ltd</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -183,7 +183,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Website</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -192,7 +192,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Website</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -201,7 +201,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Website</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -214,7 +214,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Graphic Design</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -223,7 +223,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Graphic Design</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -232,7 +232,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Graphic Design</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -245,7 +245,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Networks</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -254,7 +254,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Networks</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
@@ -263,7 +263,7 @@
                                 <li>
                                     <div class="details">
                                         <p class="project-type text-white">Networks</p>
-                                        <p class="project-title text-capitalize text-white"><a href="#">Climate Finance</a></p>
+                                        <p class="project-title text-capitalize text-white"><a href="portfolio-item.html">Climate Finance</a></p>
                                     </div>
                                     <div class="project-image">
                                         <img class="w-100" src="./images/climate-finance@2x.jpg" alt="climate finance">
