--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                     <a href="portfolio.html">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contacts</a>
+                                    <a href="contacts.html">Contacts</a>
                                 </li>
                             </ul>
                         </div>
