--- a/about-us.html
+++ b/about-us.html
@@ -365,16 +365,16 @@
                             <h4>links</h4>
                             <ul>
                                 <li>
-                                    <a href="#">Creative and Design</a>
+                                    <a href="service.html">Creative and Design</a>
                                 </li>
                                 <li>
-                                    <a href="#">Business Solutions</a>
+                                    <a href="service.html">Business Solutions</a>
                                 </li>
                                 <li>
-                                    <a href="#">Networking Solutions</a>
+                                    <a href="service.html">Networking Solutions</a>
                                 </li>
                                 <li>
-                                    <a href="#">Web Host and Internet</a>
+                                    <a href="service.html">Web Host and Internet</a>
                                 </li>
                                 <li>
                                     <a href="index.html">Home</a>
@@ -386,7 +386,7 @@
                                     <a href="portfolio.html">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contacts</a>
+                                    <a href="contacts.html">Contacts</a>
                                 </li>
                             </ul>
                         </div>
