--- a/contacts.html
+++ b/contacts.html
@@ -7,14 +7,13 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="https://kit.fontawesome.com/827b581b4c.js" crossorigin="anonymous"></script>
 
 
-    <title>Website Design and Development | BizTalk Systems</title>
+    <title>Contacts | BizTalk Systems</title>
   </head>
-  <body class="page-node-service">
+  <body class="page-node-contacts">
     <header>
         <nav class="navbar navbar-scroll">
             <div class="container">
@@ -92,12 +91,11 @@
                 <div class="col-md-12">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb text-center">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item"><a href="portfolio.html">What we do</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Website design and development</li>
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Contacts</li>
                         </ol>
                     </nav>
-                    <h2 class="page-title text-white text-uppercase">Website design and development</h2>
+                    <h2 class="page-title text-white text-uppercase">Contacts</h2>
                 </div>
             </div>
         </div>
@@ -105,95 +103,101 @@
 
     <section id="content-wrapper">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-8">
-                    <div class="field-image">
-                        <img class="w-100" src="./images/service@2x.jpg" alt="service">
-                    </div>
-                    <div class="field-title">
-                        <h2>Website Design and Development</h2>
-                    </div>
-                    <div class="field-body">
-                        <p>BizTalk Systems provides standard and personalized web design and development services. 
-                        We understand that web designing is a step by step process which requires the co-operation between 
-                        the designer and the client. Our team of highly competent web designer and developers will communicate 
-                        with you throughout the design procedure.</p>
-
-                        <p>Using requirements analysis methods such as questionnaires, focus groups, and functional prototypes, 
-                        we draw out your design requirements. We work with you throughout the design process thereby 
-                        providing deliverables specific to your requirements and fitting in your budget.</p>
-                            
-                        <p>We develop database-driven web sites using popular frameworks and Content Management Systems (CMS), 
-                        like Drupal, WordPress, custom database solutions using MySQL, Microsoft SQL Server, Oracle and custom 
-                        web applications using PHP, AJAX, XML, HTML5 and CSS3.</p>
-
-                        <ul class="highlights">
-                            <li>
-                                <h6 class="text-uppercase">Corporate Website Design and Development</h6>
-                                <p class="mb-0">
-                                    Web design is all about conveying information to the users in the most direct, clean and usable 
-                                    manner.
-                                </p>
-                            </li>
-                            <li>
-                                <h6 class="text-uppercase">SME Website Design and Development</h6>
-                                <p class="mb-0">
-                                    Small and Medium Enterprises (SME) are the backbone of our economy contributing to job creation and 
-                                    poverty reduction.
-                                </p>
-                            </li>
-                            <li>
-                                <h6 class="text-uppercase">Custom Web Application Development</h6>
-                                <p class="mb-0">
-                                    We have acquired vast experience in the field of custom web application development; we can develop 
-                                    a wide range of custom made application with various open-source and MVC platforms as well as
-                                </p>
-                            </li>
-                            <li>
-                                <h6 class="text-uppercase">Outsource Web Application Development</h6>
-                                <p class="mb-0">
-                                    At BizTalk Systems limited we can act as your repository for your surplus web projects..
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+			<div class="row">
                 <div class="col-md-4">
-                    <div class="more-services">
-                        <h2 class="title">Creative and Design</h2>
+                    <div class="intro">
+                        <h4>Looking for a web<br> design company?</h4>
+                        <p>You’ve found one!</p>
+                    </div>
+                    <ul class="socials">
+                        <li>
+                            <a href="https://www.fb.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        </li><li>
+                            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                    <div class="contacts">
                         <ul>
                             <li>
-                                <a href="#">Website Design and 
-                                    Development</a>
+                                <h4>Address</h4>
+                                <p>Plot 37/39, William Street<br>
+                                    Equatoria Mall, Room 619 /628<br>
+                                    P.O.Box 794, Kampala - Uganda</p>
                             </li>
                             <li>
-                                <a href="#">Graphics Design, Print and 
-                                    Multimedia Production</a>
+                                <h4>Office Line</h4>
+                                <p><a href="tel:+256414580201">+256 414 580201</a></p>
                             </li>
                             <li>
-                                <a href="#">Database and Application 
-                                    Development</a>
+                                <h4>Mobile Lines</h4>
+                                <p><a href="tel:+256772530837">+256 772 530837</a></p>
+                                <p><a href="tel:+256702530837">+256 702 530837</a></p>
+                                <p><a href="tel:+256788575594">+256 788 575594</a></p>
+                                <p><a href="tel:+256782079805">+256 782 079805</a></p>
                             </li>
                             <li>
-                                <a href="#">Corporate Branding</a>
+                                <h4>Email</h4>
+                                <p><a href="mailto:info@biztalkweb.com">info@biztalkweb.com</a></p>
+                                <p><a href="mailto:sales@biztalkweb.com">sales@biztalkweb.com</a></p>
                             </li>
                         </ul>
                     </div>
-                    <div class="quality">
-                        <div class="content">
-                            <div class="image-wrapper">
-                                <img src="./images/call.svg" alt="call">
-                            </div>
-                            <h4 class="text-center">BEST QUALITY SERVICES</h4>
-                            <p class="text-center">CALL US TODAY</p>
-                            <p class="text-center"><strong>+256 414 580 201</strong></p>
+                </div>
+                <div class="col-md-8">
+                    <div class="form-wrapper">
+                        <div class="form-top">
+                            <img src="./images/mail.svg" alt="mail">
+                            <p>Write us a few words about your project and we’ll get back to you in a very 
+                                short while about the next steps</p>
+                        </div>
+                        <div class="form-inner">
+                            <form action="assets/inc/sendemail.php" class="comment-one__form contact-form-validated" novalidate="novalidate">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="comment-form__input-box">
+                                            <input type="text" placeholder="full Name" name="name">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="comment-form__input-box">
+                                            <input type="email" placeholder="Email" name="email">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="comment-form__input-box">
+                                            <input type="text" placeholder="Phone" name="phone">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="comment-form__input-box">
+                                            <input type="select" placeholder="Select Service" name="Select">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="comment-form__input-box">
+                                            <textarea name="message" placeholder="Requirement Description"></textarea>
+                                        </div>
+                                        <div class="captcha">
+                                            <label>CAPTCHA</label>
+                                            <p class="help-text">Please enter the following security code:</p>
+                                            <img src="./images/recaptcha@2x.jpg" alt="captcha">
+                                            <p><strong>What code is in the image? *:</strong></p>
+                                            <input type="text">
+                                            <p class="help-text">Enter the characters shown in the image.</p>
+                                        </div>
+                                        <button type="submit" class="thm-btn comment-form__btn">send</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                    <div class="quick-quote">
-                        <p>Request a <a href="#">Quick quote</a></p>
-                    </div>
                 </div>
-            </div>
+			</div>
 		</div>
     </section>
 
@@ -319,10 +323,17 @@
 		integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
 		crossorigin="anonymous"></script>
     <script>
-        var myCarousel = document.querySelector('#myCarousel')
-        var carousel = new bootstrap.Carousel(myCarousel)
+        var triggerTabList = [].slice.call(document.querySelectorAll('#myTab button'))
+        triggerTabList.forEach(function (triggerEl) {
+        var tabTrigger = new bootstrap.Tab(triggerEl)
+
+        triggerEl.addEventListener('click', function (event) {
+            event.preventDefault()
+            tabTrigger.show()
+        })
+        })
+
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   </body>
 </html>
