--- a/index.html
+++ b/index.html
@@ -43,11 +43,42 @@
                   </a>
               </div>
               <div class="nav-wrapper_menu-toggler d-flex">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                       <span class="navbar-toggler-icon"></span>
                       <span class="navbar-toggler-icon"></span>
                   </button>
+
+                  <!-- <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="container">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="about-us.html">About us</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                What we do
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="service.html">Business Solutions</a></li>
+                                <li><a class="dropdown-item" href="service.html">Creative and Design</a></li>
+                                <li><a class="dropdown-item" href="service.html">Networking</a></li>
+                                <li><a class="dropdown-item" href="service.html">Web Host & Internet</a></li>
+                              </ul>
+                            </li>  
+                            <li class="nav-item">
+                              <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>    
+                            <li class="nav-item">
+                              <a class="nav-link" href="contacts.html">Contacts</a>
+                            </li>    
+                          </ul>
+                    </div>
+                    
+                  </div> -->
               </div>
             </div>
           </div>
@@ -55,7 +86,7 @@
     </header>
 
     <section id="hero-wrapper">
-        <div class="floating-area d-none d-md-block">
+        <div class="floating-area">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -110,13 +141,13 @@
     <section id="welcome-Wrapper">
         <div class="container">
 			<div class="row">
-                <div class="col-xl-6 wow slideInLeft animated" data-wow-delay="100ms" data-wow-duration="2500ms" style="visibility: visible; animation-duration: 2500ms; animation-delay: 100ms; animation-name: slideInLeft;">
+                <div class="col-lg-5 col-xl-6 wow slideInLeft animated order-2 order-lg-1" data-wow-delay="100ms" data-wow-duration="2500ms" style="visibility: visible; animation-duration: 2500ms; animation-delay: 100ms; animation-name: slideInLeft;">
 					<div class="welcome-one__left">
 						<div class="welcome-one__img-box">
 							<div class="welcome-one__img">
 								<img class="w-100" src="./images/intro-image@2x.jpg" alt="">
 							</div>
-							<div class="d-none d-md-block welcome-one__experience">
+							<div class="welcome-one__experience">
 								<div class="welcome-one__experience-icon">
 									<span class=" icon-conversation"></span>
 								</div>
@@ -127,7 +158,7 @@
 						</div>
 					</div>
 				</div>
-                <div class="col-xl-6 ">
+                <div class="col-lg-7 col-xl-6 order-1 order-lg-2">
 					<div class="welcome-one__right">
                         <div class="section-title text-left">
                             <span class="section-title__tagline">Our introductions</span>
@@ -474,11 +505,11 @@
         <div class="footer-lower">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
-                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
-                    </div>
-                    <div class="col-md-5">
+                    <div class="col-12 col-lg-5">
                         <p class="m-0 disclaimer">All logos and trademarks are for the respective companies</p>
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
                     </div>
                 </div>
             </div>
