--- a/about-us.html
+++ b/about-us.html
@@ -73,13 +73,13 @@
     <section id="welcome-Wrapper">
         <div class="container">
 			<div class="row">
-                <div class="col-xl-6 wow slideInLeft animated" data-wow-delay="100ms" data-wow-duration="2500ms" style="visibility: visible; animation-duration: 2500ms; animation-delay: 100ms; animation-name: slideInLeft;">
+                <div class="col-lg-5 col-xl-6 wow slideInLeft animated order-2 order-lg-1" data-wow-delay="100ms" data-wow-duration="2500ms" style="visibility: visible; animation-duration: 2500ms; animation-delay: 100ms; animation-name: slideInLeft;">
 					<div class="welcome-one__left">
 						<div class="welcome-one__img-box">
 							<div class="welcome-one__img">
 								<img class="w-100" src="./images/about-top@2x.jpg" alt="about us">
 							</div>
-							<div class="d-none d-md-block welcome-one__experience">
+							<div class="welcome-one__experience">
 								<div class="welcome-one__experience-icon">
 									<span class=" icon-conversation"></span>
 								</div>
@@ -90,7 +90,7 @@
 						</div>
 					</div>
 				</div>
-                <div class="col-xl-6 ">
+                <div class="col-lg-7 col-xl-6 order-1 order-lg-2">
 					<div class="welcome-one__right">
                         <div class="section-title text-left">
                             <span class="section-title__tagline">Get to know us at BizTalk</span>
@@ -371,11 +371,11 @@
         <div class="footer-lower">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
-                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
-                    </div>
-                    <div class="col-md-5">
+                    <div class="col-12 col-lg-5">
                         <p class="m-0 disclaimer">All logos and trademarks are for the respective companies</p>
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
                     </div>
                 </div>
             </div>
