--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,12 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="comment-form__input-box">
-                                            <input type="select" placeholder="Select Service" name="Select">
+                                           <select id="services" name="select" form="serviceform" placeholder="Select Service">
+                                                <option value="service1">Service 1</option>
+                                                <option value="service2">Service 2</option>
+                                                <option value="service3">Service 3</option>
+                                                <option value="service4">Service 4</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -275,11 +280,11 @@
         <div class="footer-lower">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
-                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
-                    </div>
-                    <div class="col-md-5">
+                    <div class="col-12 col-lg-5">
                         <p class="m-0 disclaimer">All logos and trademarks are for the respective companies</p>
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
                     </div>
                 </div>
             </div>
