--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -241,11 +241,11 @@
         <div class="footer-lower">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
-                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
-                    </div>
-                    <div class="col-md-5">
+                    <div class="col-12 col-lg-5">
                         <p class="m-0 disclaimer">All logos and trademarks are for the respective companies</p>
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <p class="m-0 copyright">Copyright © 2022 BizTalk Systems Limited, All rights reserved  |  <em>Systems Built For Results</em></p>
                     </div>
                 </div>
             </div>
